--- a/Referral.html
+++ b/Referral.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
-  <!-- Mirrored from html.awaikenthemes.com/Echeck/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:11 GMT -->
+  <!-- Mirrored from html.awaikenthemes.com/Checkfac/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:11 GMT -->
  <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,8 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
-    <title>Echeck Payment</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/Echeckfevicon.png">
+    <title>Checkfac Payment</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/Checkfacfevicon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&amp;display=swap" rel="stylesheet">
@@ -25,11 +25,11 @@
   <body>
     <!-- Preloader Start -->
     <div class="preloader">
-      <div class="loading-container">
-        <div class="loading"></div>
-        <div id="loading-icon"><img src="images/loader.svg" alt="" /></div>
-      </div>
-    </div>
+		<div class="loading-container">
+			<div class="loading"></div>
+			<div id="loading-icon"><img class="main-logo" src="logo/logo12.png" alt=""></div>
+		</div>
+	</div>
     <!-- Preloader End -->
 
     <!-- Header Start -->
@@ -45,28 +45,23 @@
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
-                                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="Referral.html">Refrral</a></li>
-                               <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
-                                <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
-                                    <ul>
-                                        <li class="nav-item"><a class="nav-link" href="#">Service Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Our Team</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Team Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Pricing Plan</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Clients</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Image Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Video Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">404</a></li>
+                                <li class="nav-item submenu"><a class="nav-link" href="#">Services</a>
+                                <ul>
+                                        <li class="nav-item"><a class="nav-link" href="#">Checkfac Payment Processing Services</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Credit Card Payment Processing Services</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Check Verification</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Incorporation</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="Referral.html">Refrral</a></li>
+                               <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+
+                               
                             </ul>
                         </div>
                         <div class="header-btn d-inline-flex">
-                            <a href="contact.html" class="btn-default btn-highlighted">contact us</a>
+                            <a href="demo.html" class="btn-default btn-highlighted">Request Demo</a>
                         </div>
 					</div>
 					<div class="navbar-toggle"></div>
@@ -140,7 +135,7 @@
             <div class="about-us-content">
               <!-- Section Title Start -->
               <div class="section-title">
-                <h3 class="wow fadeInUp">About Echeck Referral Program</h3>
+                <h3 class="wow fadeInUp">About Checkfac Referral Program</h3>
                 <h2 class="text-anime-style-2">
                   Trusted partnership for <span>mutual growth</span>
                 </h2>
@@ -156,7 +151,7 @@
                   <!-- Left Column: Image Only -->
                   <!-- <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="0.3s">
                     <figure class="image-anime reveal">
-                        <img src="images/about-echeck.jpg" alt="About Echeck Payment" class="img-fluid rounded shadow-lg">
+                        <img src="images/about-Checkfac.jpg" alt="About Checkfac Payment" class="img-fluid rounded shadow-lg">
                     </figure>
                 </div> -->
 
@@ -167,7 +162,7 @@
                       data-wow-delay="0.4s"
                     >
                       <p>
-                       eCheck is committed to delivering reliable services and shared success. Our referral program is designed to help you earn exceptional rewards effortlessly. Simply refer businesses or merchants seeking better payment solutions, and once they join eCheck, you’ll receive a share of the profits we earn each month. Plus, you’ll enjoy exclusive access to our services at specially discounted rates. There’s no limit to how many referrals you can make — the more you refer, the more you earn!
+                       Checkfac is committed to delivering reliable services and shared success. Our referral program is designed to help you earn exceptional rewards effortlessly. Simply refer businesses or merchants seeking better payment solutions, and once they join Checkfac, you’ll receive a share of the profits we earn each month. Plus, you’ll enjoy exclusive access to our services at specially discounted rates. There’s no limit to how many referrals you can make — the more you refer, the more you earn!
                       </p>
                     </div>
                   </div>
@@ -186,7 +181,7 @@
     <div class="our-pricing" style="background:#0fa958;margin:15px;padding:80px 20px;text-align:center;color:#fff;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.15);">
   <div class="container">
     <h2 style="font-size:38px;font-weight:700;margin-bottom:15px;">Start Your <span style="color:#fff;">Referral Journey</span> Today</h2>
-    <p style="font-size:17px;margin-bottom:25px;">Our referral program is built to create mutual growth and shared success. By connecting new businesses to eCheck, you earn exciting rewards while helping us expand our network. It’s a simple, transparent, and rewarding way for both sides to grow together.</p>
+    <p style="font-size:17px;margin-bottom:25px;">Our referral program is built to create mutual growth and shared success. By connecting new businesses to Checkfac, you earn exciting rewards while helping us expand our network. It’s a simple, transparent, and rewarding way for both sides to grow together.</p>
     <a href="contact.html" style="background:#fff;color:#0fa958;padding:10px 28px;border-radius:30px;font-weight:600;text-decoration:none;display:inline-block;transition:all .3s;">Get Started Now</a>
   </div>
 </div>
@@ -297,7 +292,7 @@
                         <div class="section-title">
                             <h3 class="wow fadeInUp">Customer Thoughts</h3>
                             <h2 class="text-anime-style-2" data-cursor="-opaque">What <span>customers say </span>about Us</h2>
-                            <p class="wow fadeInUp" data-wow-delay="0.2s">Users trust Echeck payement for its speed, simplicity, and strong security, delivering a seamless payment experience that’s fast, reliable, and worry-free.</p>
+                            <p class="wow fadeInUp" data-wow-delay="0.2s">Users trust Checkfac payement for its speed, simplicity, and strong security, delivering a seamless payment experience that’s fast, reliable, and worry-free.</p>
                         </div>
                         <div class="how-it-work-btn wow fadeInUp" data-wow-delay="0.4s">
                             <a href="contact.html" class="btn-default">learn more</a>
@@ -310,7 +305,7 @@
                         <div class="work-step-item wow fadeInUp">
                             <div class="work-step-item-content">
                                 <h2>Priya</h2>
-                                <p>Echeckpayment has completely transformed the way I manage my business payments. Earlier, I had to deal with delays and manual tracking, but now everything is automated and efficient. The platform is incredibly user-friendly, and the real-time transaction updates keep me informed. The best part is their security — I feel completely confident while handling online payments. It’s reliable, fast, and truly built for business owners.</p>
+                                <p>Checkfacpayment has completely transformed the way I manage my business payments. Earlier, I had to deal with delays and manual tracking, but now everything is automated and efficient. The platform is incredibly user-friendly, and the real-time transaction updates keep me informed. The best part is their security — I feel completely confident while handling online payments. It’s reliable, fast, and truly built for business owners.</p>
                             </div>
                             <div class="work-step-item-no">
                                 <h2>01</h2>
@@ -320,7 +315,7 @@
                         <div class="work-step-item wow fadeInUp" data-wow-delay="0.2s">
                             <div class="work-step-item-content">
                                 <h2>David Thompson</h2>
-                                <p>Our company processes multiple vendor payments every day, and Echeck Payment has made the entire process seamless. The integration with our accounting system was quick, and the dashboard gives complete visibility into each transaction. Their support team is professional and responsive. With advanced encryption and strong compliance, I know our financial data is always protected. It’s a platform we can depend on for consistent results.</p>
+                                <p>Our company processes multiple vendor payments every day, and Checkfac Payment has made the entire process seamless. The integration with our accounting system was quick, and the dashboard gives complete visibility into each transaction. Their support team is professional and responsive. With advanced encryption and strong compliance, I know our financial data is always protected. It’s a platform we can depend on for consistent results.</p>
                             </div>
                             <div class="work-step-item-no">
                                 <h2>02</h2>
@@ -330,7 +325,7 @@
                         <div class="work-step-item wow fadeInUp" data-wow-delay="0.4s">
                             <div class="work-step-item-content">
                                 <h2>Ritu Verma</h2>
-                                <p>As a freelancer handling clients across different regions, I needed a secure and flexible payment solution — Echeck Payment exceeded my expectations. Sending and receiving payments is quick, and I get instant notifications for every transaction. The platform’s simplicity is its strength, and I love that it requires no complicated setup or hidden charges. It has made my financial workflow much smoother and worry-free.</p>
+                                <p>As a freelancer handling clients across different regions, I needed a secure and flexible payment solution — Checkfac Payment exceeded my expectations. Sending and receiving payments is quick, and I get instant notifications for every transaction. The platform’s simplicity is its strength, and I love that it requires no complicated setup or hidden charges. It has made my financial workflow much smoother and worry-free.</p>
                             </div>
                             <div class="work-step-item-no">
                                 <h2>03</h2>
@@ -345,7 +340,7 @@
     <div class="our-pricing" style="background:#0fa958;margin:15px;padding:80px 20px;text-align:center;color:#fff;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.15);">
   <div class="container">
     <h2 style="font-size:38px;font-weight:700;margin-bottom:15px;">Open Your <span style="color:#fff;">E-Check Account</span> Instantly</h2>
-    <p style="font-size:17px;margin-bottom:25px;">Create your Echeck Payment account in minutes and start accepting secure digital payments effortlessly.</p>
+    <p style="font-size:17px;margin-bottom:25px;">Create your Checkfac Payment account in minutes and start accepting secure digital payments effortlessly.</p>
     <a href="contact.html" style="background:#fff;color:#0fa958;padding:10px 28px;border-radius:30px;font-weight:600;text-decoration:none;display:inline-block;transition:all .3s;">Get Started Now</a>
   </div>
 </div>
@@ -366,14 +361,14 @@
     <!-- Our FAQs Section End-->
 
     <!-- Footer Section Start -->
-  <footer class="main-footer" style="background:#0a0a0a;padding:80px 20px 50px 20px;color:#dcdcdc;">
+ <footer class="main-footer" style="background:#004050;padding:80px 20px 50px 20px;color:#dcdcdc;">
   <div class="container">
     <div class="row" style="align-items:flex-start;">
       <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
         <div class="footer-about">
-          <img src="images/footer-logo.svg" alt="Echeck Logo" style="max-width:180px;margin-bottom:15px;">
+          <img src="logo/logo.png" alt="Checkfac Logo" style="max-width:180px;margin-bottom:15px;">
           <p style="color:#dcdcdc;line-height:1.6;">
-            eCheckplan provides secure, fast, and reliable eCheck payment processing solutions designed to simplify online transactions for businesses and individuals.
+            Checkfacplan provides secure, fast, and reliable Checkfac payment processing solutions designed to simplify online transactions for businesses and individuals.
           </p>
         </div>
       </div>
@@ -382,9 +377,9 @@
         <div class="footer-links">
           <h3 style="color:#ffffff;margin-bottom:15px;">Services</h3>
           <ul style="list-style:none;padding:0;margin:0;">
-            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Checkfac Payment Processing</a></li>
             <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Incorporation</a></li>
-            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing Services</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Checkfac Payment Processing Services</a></li>
             <li><a href="#" style="color:#dcdcdc;text-decoration:none;">Credit Card Payment Processing Services</a></li>
           </ul>
         </div>
@@ -396,7 +391,7 @@
           <p style="color:#dcdcdc;">Location: Florida, USA</p>
           <p style="color:#dcdcdc;">
             <strong>Phone:</strong> (800) 974-9661<br>
-            <strong>Email:</strong> support@echeckplan.com
+            <strong>Email:</strong> support@Checkfacplan.com
           </p>
           <div style="margin-top:12px;">
             <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
@@ -419,7 +414,7 @@
 
     <div class="row">
       <div class="col-lg-12" style="text-align:center;margin-top:40px;">
-        <p style="color:#dcdcdc;">© 2024 eCheckplan. All Rights Reserved.</p>
+        <p style="color:#dcdcdc;">© 2024 Checkfacplan. All Rights Reserved.</p>
       </div>
     </div>
   </div>
@@ -460,5 +455,5 @@
     <script src="../../demo.awaikenthemes.com/assets/js/theme-panel.js"></script>
   </body>
 
-  <!-- Mirrored from html.awaikenthemes.com/Echeck/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:16 GMT -->
+  <!-- Mirrored from html.awaikenthemes.com/Checkfac/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:16 GMT -->
 </html>
