--- a/demo.html
+++ b/demo.html
@@ -1,53 +1,38 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-
-<head>
-	<!-- Meta -->
+  <!-- Mirrored from html.awaikenthemes.com/Checkfac/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:11 GMT -->
+ <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
-	<!-- Page Title -->
     <title>Checkfac Payment</title>
-	<!-- Favicon Icon -->
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
-	<!-- Google Fonts Css-->
+	<link rel="shortcut icon" type="image/x-icon" href="images/Checkfacfevicon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&amp;display=swap" rel="stylesheet">
-	<!-- Bootstrap Css -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<!-- SlickNav Css -->
 	<link href="css/slicknav.min.css" rel="stylesheet">
-	<!-- Swiper Css -->
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
-	<!-- Font Awesome Icon Css-->
 	<link href="css/all.min.css" rel="stylesheet" media="screen">
-	<!-- Animated Css -->
 	<link href="css/animate.css" rel="stylesheet">
-    <!-- Magnific Popup Core Css File -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	<!-- Mouse Cursor Css File -->
 	<link rel="stylesheet" href="css/mousecursor.css">
-	<!-- Main Custom Css -->
 	<link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
-<body>
-
+  <body>
     <!-- Preloader Start -->
-		<div class="preloader">
+   	<div class="preloader">
 		<div class="loading-container">
 			<div class="loading"></div>
 			<div id="loading-icon"><img class="main-logo" src="logo/logo12.png" alt=""></div>
 		</div>
 	</div>
-	<!-- Preloader End -->
+    <!-- Preloader End -->
 
     <!-- Header Start -->
-	
 <header class="main-header">
 		<div class="header-sticky">
 			<nav class="navbar navbar-expand-lg">
@@ -85,20 +70,19 @@
 			<div class="responsive-menu"></div>
 		</div>
 	</header>
-	<!-- Header End -->
+    <!-- Header End -->
 
-    <!-- Page Header Start -->
-    <div class="page-header">
+<div class="page-header">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <!-- Page Header Box Start -->
                     <div class="page-header-box">
-                        <h1 class="text-anime-style-2" data-cursor="-opaque">Contact us</h1>
+                        <h1 class="text-anime-style-2" data-cursor="-opaque">Demo</h1>
                         <nav class="wow fadeInUp">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">/ contact us</li>
+                                <li class="breadcrumb-item active" aria-current="page">/ Request Demo</li>
                             </ol>
                         </nav>
                     </div>
@@ -110,74 +94,13 @@
     <!-- Page Header End -->
 
     <!-- Page Contact Us Start -->
-    <div class="page-contact-us">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <!-- Conatct Info Item Start -->
-                    <div class="contact-info-item wow fadeInUp">
-                        <div class="contact-info-img">
-                            <figure class="image-anime">
-                                <img src="images/contact-info-img-1.jpg" alt="">
-                            </figure>
-                        </div>
-                        <div class="contact-info-body">
-                            <div class="icon-box">
-                                <img src="images/icon-phone.svg" alt="">
-                            </div>
-                            <div class="contact-info-content">
-                                <h3>call us any time!</h3>
-                                <p>(800) 974-9661
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Conatct Info Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Conatct Info Item Start -->
-                    <div class="contact-info-item wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="contact-info-img">
-                            <figure class="image-anime">
-                                <img src="images/contact-info-img-2.jpg" alt="">
-                            </figure>
-                        </div>
-                        <div class="contact-info-body">
-                            <div class="icon-box">
-                                <img src="images/icon-mail.svg" alt="">
-                            </div>
-                            <div class="contact-info-content">
-                                <h3>send us e-mail</h3>
-                                <p>support@Checkfacplan.com</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Conatct Info Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Conatct Info Item Start -->
-                    <div class="contact-info-item wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="contact-info-img">
-                            <figure class="image-anime">
-                                <img src="images/contact-info-img-1.jpg" alt="">
-                            </figure>
-                        </div>
-                        <div class="contact-info-body">
-                            <div class="icon-box">
-                                <img src="images/icon-location.svg" alt="">
-                            </div>
-                            <div class="contact-info-content">
-                                <h3>Office address</h3>
-                                <p>Location: Florida, USA</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Conatct Info Item End -->
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="our-pricing" style="background:#0fa958;margin:15px;padding:80px 20px;text-align:center;color:#fff;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.15);">
+  <div class="container">
+    <h2 style="font-size:38px;font-weight:700;margin-bottom:15px;">Speed Up  <span style="color:#fff;">Your Business with Our </span>Payment Solutions</h2>
+    <p style="font-size:17px;margin-bottom:25px;">Our all-in-one digital payment platform makes it effortless to accept payments instantly. From electronic check (Checkfac) processing to quick merchant account onboarding, Checkfak gives businesses the power to start receiving funds without delays — accelerating cash flow, efficiency, and growth.</p>
+    <a  style="background:#fff;color:#0fa958;padding:10px 28px;border-radius:30px;font-weight:600;text-decoration:none;display:inline-block;transition:all .3s;">Start Now</a>
+  </div>
+</div>
     <!-- Page Contact Us End -->    
 
     <!-- Contact Form Section Start -->
@@ -245,25 +168,24 @@
         </div>
      </div>
     <!-- Contact Form Section End -->
+    <!-- Our Partners Section Start -->
+    
+    <!-- Our Partners Section End -->
 
-    <!-- Google Map Start -->
-    <div class="google-map">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <!-- Google Map Start -->
-                    <div class="google-map-iframe">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96737.10562045308!2d-74.08535042841811!3d40.739265258395164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1703158537552!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <!-- Google Map End -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Google Map End -->  
+    <!-- Our Team Section Start -->
+    
+    <!-- Our Team Section End -->
+
+    <!-- Our Testimonial Section Start -->
+   
+    <!-- Our Testimonial Section End -->
+
+    <!-- Our FAQs Section Start-->
+   
+    <!-- Our FAQs Section End-->
 
     <!-- Footer Section Start -->
- <footer class="main-footer" style="background:#004050;padding:80px 20px 50px 20px;color:#dcdcdc;">
+   <footer class="main-footer" style="background:#004050;padding:80px 20px 50px 20px;color:#dcdcdc;">
   <div class="container">
     <div class="row" style="align-items:flex-start;">
       <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
@@ -354,8 +276,8 @@
     <script src="js/wow.min.js"></script>
     <!-- Main Custom js file -->
     <script src="js/function.js"></script>
-	<script src="../../demo.awaikenthemes.com/assets/js/theme-panel.js"></script>
-</body>
+    <script src="../../demo.awaikenthemes.com/assets/js/theme-panel.js"></script>
+  </body>
 
-<!-- Mirrored from html.awaikenthemes.com/Checkfac/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:26 GMT -->
+  <!-- Mirrored from html.awaikenthemes.com/Checkfac/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:16 GMT -->
 </html>
