--- a/faqs.html
+++ b/faqs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from html.awaikenthemes.com/Echeck/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:25 GMT -->
+<!-- Mirrored from html.awaikenthemes.com/Checkfac/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:25 GMT -->
 <head>
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-    <title>Echeck - Business Consulting HTML Template</title>
+    <title>Checkfac - Business Consulting HTML Template</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<!-- Google Fonts Css-->
@@ -38,10 +38,10 @@
 <body>
 
     <!-- Preloader Start -->
-	<div class="preloader">
+		<div class="preloader">
 		<div class="loading-container">
 			<div class="loading"></div>
-			<div id="loading-icon"><img src="images/loader.svg" alt=""></div>
+			<div id="loading-icon"><img class="main-logo" src="logo/logo12.png" alt=""></div>
 		</div>
 	</div>
 	<!-- Preloader End -->
@@ -59,28 +59,23 @@
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
-                                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="Referral.html">Refrral</a></li>
-                               <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
-                                <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
-                                    <ul>
-                                        <li class="nav-item"><a class="nav-link" href="#">Service Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Our Team</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Team Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Pricing Plan</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Clients</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Image Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">Video Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">404</a></li>
+                                <li class="nav-item submenu"><a class="nav-link" href="#">Services</a>
+                                <ul>
+                                        <li class="nav-item"><a class="nav-link" href="#">Checkfac Payment Processing Services</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Credit Card Payment Processing Services</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Check Verification</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Incorporation</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="Referral.html">Refrral</a></li>
+                               <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+
+                               
                             </ul>
                         </div>
                         <div class="header-btn d-inline-flex">
-                            <a href="contact.html" class="btn-default btn-highlighted">contact us</a>
+                            <a href="demo.html" class="btn-default btn-highlighted">Request Demo</a>
                         </div>
 					</div>
 					<div class="navbar-toggle"></div>
@@ -470,19 +465,19 @@
  <div class="our-pricing" style="background:#0fa958;margin:15px;padding:80px 20px;text-align:center;color:#fff;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.15);">
   <div class="container">
     <h2 style="font-size:38px;font-weight:700;margin-bottom:15px;">Open Your <span style="color:#fff;">E-Check Account</span> Instantly</h2>
-    <p style="font-size:17px;margin-bottom:25px;">Create your Echeck Payment account in minutes and start accepting secure digital payments effortlessly.</p>
+    <p style="font-size:17px;margin-bottom:25px;">Create your Checkfac Payment account in minutes and start accepting secure digital payments effortlessly.</p>
     <a href="contact.html" style="background:#fff;color:#0fa958;padding:10px 28px;border-radius:30px;font-weight:600;text-decoration:none;display:inline-block;transition:all .3s;">Get Started Now</a>
   </div>
 </div>
     <!-- Footer Section Start -->
-  <footer class="main-footer" style="background:#0a0a0a;padding:80px 20px 50px 20px;color:#dcdcdc;">
+<footer class="main-footer" style="background:#004050;padding:80px 20px 50px 20px;color:#dcdcdc;">
   <div class="container">
     <div class="row" style="align-items:flex-start;">
       <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
         <div class="footer-about">
-          <img src="images/footer-logo.svg" alt="Echeck Logo" style="max-width:180px;margin-bottom:15px;">
+          <img src="logo/logo.png" alt="Checkfac Logo" style="max-width:180px;margin-bottom:15px;">
           <p style="color:#dcdcdc;line-height:1.6;">
-            eCheckplan provides secure, fast, and reliable eCheck payment processing solutions designed to simplify online transactions for businesses and individuals.
+            Checkfacplan provides secure, fast, and reliable Checkfac payment processing solutions designed to simplify online transactions for businesses and individuals.
           </p>
         </div>
       </div>
@@ -491,9 +486,9 @@
         <div class="footer-links">
           <h3 style="color:#ffffff;margin-bottom:15px;">Services</h3>
           <ul style="list-style:none;padding:0;margin:0;">
-            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Checkfac Payment Processing</a></li>
             <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Incorporation</a></li>
-            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing Services</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Checkfac Payment Processing Services</a></li>
             <li><a href="#" style="color:#dcdcdc;text-decoration:none;">Credit Card Payment Processing Services</a></li>
           </ul>
         </div>
@@ -505,7 +500,7 @@
           <p style="color:#dcdcdc;">Location: Florida, USA</p>
           <p style="color:#dcdcdc;">
             <strong>Phone:</strong> (800) 974-9661<br>
-            <strong>Email:</strong> support@echeckplan.com
+            <strong>Email:</strong> support@Checkfacplan.com
           </p>
           <div style="margin-top:12px;">
             <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
@@ -528,7 +523,7 @@
 
     <div class="row">
       <div class="col-lg-12" style="text-align:center;margin-top:40px;">
-        <p style="color:#dcdcdc;">© 2024 eCheckplan. All Rights Reserved.</p>
+        <p style="color:#dcdcdc;">© 2024 Checkfacplan. All Rights Reserved.</p>
       </div>
     </div>
   </div>
@@ -569,5 +564,5 @@
 	<script src="../../demo.awaikenthemes.com/assets/js/theme-panel.js"></script>
 </body>
 
-<!-- Mirrored from html.awaikenthemes.com/Echeck/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:25 GMT -->
+<!-- Mirrored from html.awaikenthemes.com/Checkfac/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:25 GMT -->
 </html>
