--- a/blog.html
+++ b/blog.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from html.awaikenthemes.com/Echeck/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:16 GMT -->
+<!-- Mirrored from html.awaikenthemes.com/Checkfac/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:16 GMT -->
 <head>
-	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
-	<!-- Page Title -->
-    <title>Echeck - Business Consulting HTML Template</title>
-	<!-- Favicon Icon -->
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
-	<!-- Google Fonts Css-->
+    <title>Checkfac Payment</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/Checkfacfevicon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&amp;display=swap" rel="stylesheet">
-	<!-- Bootstrap Css -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<!-- SlickNav Css -->
 	<link href="css/slicknav.min.css" rel="stylesheet">
-	<!-- Swiper Css -->
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
-	<!-- Font Awesome Icon Css-->
 	<link href="css/all.min.css" rel="stylesheet" media="screen">
-	<!-- Animated Css -->
 	<link href="css/animate.css" rel="stylesheet">
-    <!-- Magnific Popup Core Css File -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	<!-- Mouse Cursor Css File -->
 	<link rel="stylesheet" href="css/mousecursor.css">
-	<!-- Main Custom Css -->
 	<link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
 <body>
 
     <!-- Preloader Start -->
-	<div class="preloader">
+		<div class="preloader">
 		<div class="loading-container">
 			<div class="loading"></div>
-			<div id="loading-icon"><img src="images/loader.svg" alt=""></div>
+			<div id="loading-icon"><img class="main-logo" src="logo/logo12.png" alt=""></div>
 		</div>
 	</div>
 	<!-- Preloader End -->
@@ -390,133 +378,64 @@
     <!-- Page Blog End -->
 
     <!-- Footer Section Start -->
-    <footer class="main-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <!-- Footer Newsletter Box Start -->
-                    <div class="footer-newsletter-box">
-                        <!-- Footer Newsletter Title Start -->
-                        <div class="footer-newsletter-title">
-                            <h3>Don't missed subscribed!</h3>
-                        </div>
-                        <!-- Footer Newsletter Title End -->
-
-                        <!-- Newsletter Form start -->
-                        <div class="newsletter-form">
-                            <form id="newsletterForm" action="#" method="POST">
-                                <div class="form-group">
-                                    <input type="email" name="email" class="form-control" id="mail" placeholder="Your Email" required="">
-                                    <button type="submit" class="newsletter-btn"><img src="images/arrow-white.svg" alt=""></button>
-                                </div>
-                            </form>
-                        </div>
-                        <!-- Newsletter Form end -->
-                    </div>
-                    <!-- Footer Newsletter Box End -->
-                </div>
-                
-                <div class="col-lg-2 col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>company</h3>
-                        <ul>
-                            <li><a href="index.html">home</a></li>
-                            <li><a href="about.html">about Us</a></li>
-                            <li><a href="services.html">services</a></li>
-                            <li><a href="blog.html">blog</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-2  col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>support</h3>
-                        <ul>
-                            <li><a href="#">help</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Term & Condition</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-2  col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>service</h3>
-                        <ul>
-                            <li><a href="service-single.html">Financial planning</a></li>
-                            <li><a href="service-single.html">Investment management</a></li>
-                            <li><a href="service-single.html">Retirement planning</a></li>
-                            <li><a href="service-single.html">Budgeting & forecasting</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-12">
-                    <!-- About Footer Start -->
-                    <div class="footer-cta-box">
-                        <!-- Footer Logo Start -->
-                        <div class="footer-logo">
-                            <img src="images/footer-logo.svg" alt="">
-                        </div>
-                        <!-- Footer Logo End -->
-                    
-                        <!-- Footer Contact Box Start -->
-                        <div class="footer-contact-box">
-                            <!-- Footer Contact Item Start -->
-                            <div class="footer-contact-item">
-                                <p>Need help!</p>
-                                <h3>+1.809.120.6705</h3>
-                            </div>
-                            <!-- Footer Contact Item End -->
-
-                            <!-- Footer Contact Item Start -->
-                            <div class="footer-contact-item">
-                                <p>E-mail now</p>
-                                <h3>info@domain.com</h3>
-                            </div>
-                            <!-- Footer Contact Item End -->
-                        </div>
-                        <!-- Footer Contact Box End -->
-                    </div>
-                    <!-- About Footer End -->
-                </div>
-            </div>
-
-            <!-- Footer Copyright Section Start -->
-            <div class="footer-copyright">
-                <div class="row align-items-center">
-                    <div class="col-md-5">
-                        <!-- Footer Copyright Start -->
-                        <div class="footer-copyright-text">
-                            <p>Copyright © 2024 All Rights Reserved.</p>
-                        </div>
-                        <!-- Footer Copyright End -->
-                    </div>
-
-                    <div class="col-md-7">
-                        <!-- Footer Menu Start -->
-                        <div class="footer-menu">
-                            <ul>                            
-                                <li><a href="#">LinkedIn</a></li>
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Instagram</a></li>
-                                <li><a href="#">Twitter</a></li>
-                            </ul>
-                        </div>
-                        <!-- Footer Menu End -->
-                    </div>
-                </div>
-            </div>
-            <!-- Footer Copyright Section End -->
+  <footer class="main-footer" style="background:#004050;padding:80px 20px 50px 20px;color:#dcdcdc;">
+  <div class="container">
+    <div class="row" style="align-items:flex-start;">
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-about">
+          <img src="logo/logo.png" alt="Checkfac Logo" style="max-width:180px;margin-bottom:15px;">
+          <p style="color:#dcdcdc;line-height:1.6;">
+            Checkfacplan provides secure, fast, and reliable Checkfac payment processing solutions designed to simplify online transactions for businesses and individuals.
+          </p>
         </div>
-    </footer>
+      </div>
+
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-links">
+          <h3 style="color:#ffffff;margin-bottom:15px;">Services</h3>
+          <ul style="list-style:none;padding:0;margin:0;">
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Checkfac Payment Processing</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Incorporation</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Checkfac Payment Processing Services</a></li>
+            <li><a href="#" style="color:#dcdcdc;text-decoration:none;">Credit Card Payment Processing Services</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-contact" style="text-align:left;">
+          <h3 style="color:#ffffff;margin-bottom:15px;">Contact & Address</h3>
+          <p style="color:#dcdcdc;">Location: Florida, USA</p>
+          <p style="color:#dcdcdc;">
+            <strong>Phone:</strong> (800) 974-9661<br>
+            <strong>Email:</strong> support@Checkfacplan.com
+          </p>
+          <div style="margin-top:12px;">
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;text-decoration:none;">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12" style="text-align:center;margin-top:40px;">
+        <p style="color:#dcdcdc;">© 2024 Checkfacplan. All Rights Reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
     <!-- Footer Section End -->
 
     <!-- Jquery Library File -->
@@ -553,5 +472,5 @@
 	<script src="../../demo.awaikenthemes.com/assets/js/theme-panel.js"></script>
 </body>
 
-<!-- Mirrored from html.awaikenthemes.com/Echeck/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:16 GMT -->
+<!-- Mirrored from html.awaikenthemes.com/Checkfac/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:16 GMT -->
 </html>
